feat: use date as ladder id
chore: clean code